# falcon-pagination-hook

./: .travis.yml  LICENSE  README.md  README.rst  requirements-test.txt  setup.cfg  setup.py
falcon_pagination/: offset_pagination_hook.py
tests/: conftest.py  test_offset_pagination_hook.py
