[metadata]
description-file = README.rst

[wheel]
universal = 1

[flake8]
max-line-length = 99

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[coverage:run]
omit = tests/*
branch = True
source = falcon_pagination